--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#">Liste des artistes</a>
             <a class="dropdown-item" href="#">Ajouter un artistes</a>
-          </div> 
+          </div> n
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gestion des albums</a>
