--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,14 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bienvenue !{% endblock %}
+{% block title %}Biblio Musique{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5FF5; padding: 2px 6px; }
-    .jumbotron{background-color: brown; color: white; width: 65%; margin: auto; padding:15px;}
-    h1{color:white;}
-</style> 
 
 <br>
  
