--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,27 +5,28 @@
         <title>{% block title %}Biblio Musique{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
+        <link rel="stylesheet" href="{{asset('css/app.css')}}">
 
     </head>
     <body>
       {# navbar #}
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{'accueil'}}">Biblio Musique</a>
+    <a class="navbar-brand" href="{{path('accueil')}}">Biblio Musique</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Accueil
+          <a class="nav-link active" href="{{path('accueil')}}">Accueil
             <span class="visually-hidden">(current)</span>
           </a>
         </li> 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gestion des artistes</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Liste des artistes</a>
+            <a class="dropdown-item" href="{{path('artistes')}}">Liste des artistes</a>
             <a class="dropdown-item" href="#">Ajouter un artistes</a>
           </div> 
         </li>
