--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gestion des albums</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Liste des albums</a>
+            <a class="dropdown-item" href="{{path("albums")}}">Liste des albums</a>
           </div>
         </li>
       </ul>
@@ -46,6 +46,6 @@
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-
+ 
     </body>
 </html>
