--- a/templates/album/ficheAlbum.html.twig
+++ b/templates/album/ficheAlbum.html.twig
@@ -9,9 +9,6 @@
 
     <h1 class="pt-2 text-center" style="color:white">Fiche de l'album</h1>
     <hr>
-    <div class="row pt-2">
-
-        
             <div class="col-sm-12 col-md-12 col-lg-4 col-xl">
                 <div class="card mb-3">
             <h3 class="card-header" style="color:red"> {{leAlbum.nom}} </h3>
@@ -42,7 +39,6 @@
             </div>
             </div>
             </div>
-        </div>
     </div>  
 
 
@@ -61,8 +57,9 @@
   
     <tr class="table-active">
 
-      <td scope="row"> {{leMorceau.piste}} </td>
+      <td scope="row">  </td>
       <td>{{leMorceau.titre}}</td>
+      <td>{{leMorceau.duree}}</td>
       <td>{{leMorceau.duree}}</td>
 
     </tr>
