--- a/templates/album/listeAlbum.html.twig
+++ b/templates/album/listeAlbum.html.twig
@@ -41,6 +41,9 @@
             </div>
         </div>
     {% endfor %}
+    <div class="navigation">
+        {{ knp_pagination_render(pagination) }}
+    </div>
     </div>  
 </div>
 {% endblock %}
