--- a/templates/artiste/ficheArtiste.html.twig
+++ b/templates/artiste/ficheArtiste.html.twig
@@ -63,7 +63,7 @@
   
     <tr class="table-active">
 
-      <td> <img class"miniature" src="{{leAlbum.image}}" alt=""></td>
+      <td> <img class"miniature" src="{{leAlbum.image}}" style="width:70px"></td>
       <td scope="row"> {{leAlbum.nom}} </td>
       <td>{{leAlbum.date}}</td>
       <td></td>
