--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Biblio Musique{% endblock %}
+{% block title %}D2R Musique{% endblock %}
 
 {% block body %}
 
