--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}D2R{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
         <link rel="stylesheet" href="{{asset('css/app.css')}}">
+        <link rel="shortcut icon" href="{{ asset('icone/d2r_i.png') }}" type="image/x-icon">
 
     </head>
     <body>
       {# navbar #}
-<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{path('accueil')}}">D2R</a>
+       <img src="{{ asset('icone/d2r_log.png') }}" style="width:67px">
+    <a class="navbar-brand" href="{{path('accueil')}}"> &nbsp; D2R </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,7 +28,6 @@
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gestion des artistes</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{{path('artistes')}}">Liste des artistes</a>
-            <a class="dropdown-item" href="#">Ajouter un artistes</a>
           </div> 
         </li>
         <li class="nav-item dropdown">
@@ -36,12 +36,18 @@
             <a class="dropdown-item" href="{{path("albums")}}">Liste des albums</a>
           </div>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="{{path("admin_artistes")}}">Gestion des artistes</a>
+          </div>
+        </li>
       </ul>
 
     </div>
   </div>
 </nav>
-
+<br><br>
         {% block body %}{% endblock %}
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
