debut form | 15min vid 14

--- a/templates/admin/artiste/listeArtistes.html.twig
+++ b/templates/admin/artiste/listeArtistes.html.twig
@@ -7,7 +7,7 @@
 <div class="container">
     <h1 class="pt-2 text-center" style="color:white">Gestion des artistes</h1>
     <div class="d-flex justify-content-end">
-    <a href="#" class="btn btn-success" style="border-radius: 4px;">
+    <a href=" {{path("admin_artistes_ajout")}} " class="btn btn-success" style="border-radius: 4px;">
         <img src="{{ asset('icone/ajout.png') }}" style="width: 27px" class="mr-2"> Ajouter un artiste
     </a>
 </div>
