--- a/templates/artiste/ficheArtiste.html.twig
+++ b/templates/artiste/ficheArtiste.html.twig
@@ -18,7 +18,7 @@
         
             <div class="col-sm-12 col-md-12 col-lg-4 col-xl">
                 <div class="card mb-3">
-            <h3 class="card-header" style="color:red"> {{leArtiste.nom}} </h3>
+            <h3 class="card-header" style="color:blue"> {{leArtiste.nom}} </h3>
             <div class="row">
                 <div class="col-3 d-flex align-items-center mx-auto">
                     <img class="mx-auto d-block" style="border-radius: 30%;height:auto; width:150px; margin:auto; display:block;" src="{{leArtiste.image}}" alt="Card image">
@@ -28,7 +28,7 @@
             <div class="card-body">
 
                 <h5 class="card-title"> 
-                <a href="" style='color:red;font-weight: bold;'class="badge badge-success">{{nbAlbums}} {% if nbAlbums>1 %} albums {% else %} album {% endif %} </a>
+                <a href="" style='color:blue;font-weight: bold;'class="badge badge-success">{{nbAlbums}} {% if nbAlbums>1 %} albums {% else %} album {% endif %} </a>
                 </h5>
             </div>
             <div class="card-body">
