--- a/templates/admin/artiste/listeArtistes.html.twig
+++ b/templates/admin/artiste/listeArtistes.html.twig
@@ -44,7 +44,7 @@
                     </td>
                     <td class="col-2">
                         <div class="d-flex justify-content-between">
-                            <a href="#" class="btn btn-info" id="btn">
+                            <a href=" {{path('admin_artistes_modif',{'id': leArtiste.id})}} " class="btn btn-info" id="btn">
                                 <img src="{{ asset('icone/modif.png') }}" style="width: 27px">
                             </a>
                             &nbsp;
