--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}D2R{% endblock %}</title>
-        <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
-        <link rel="stylesheet" href="{{asset('css/app.css')}}">
-        <link rel="shortcut icon" href="{{ asset('icone/d2r_i.png') }}" type="image/x-icon">
-
-    </head>
-    <body>
-      {# navbar #}
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-  <div class="container-fluid">
-       <img src="{{ asset('icone/d2r_log.png') }}" style="width:67px">
-    <a class="navbar-brand" href="{{path('accueil')}}"> &nbsp; D2R </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarColor02">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="{{path('accueil')}}">Accueil
-            <span class="visually-hidden">(current)</span>
-          </a>
-        </li> 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gestion des artistes</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{{path('artistes')}}">Liste des artistes</a>
-          </div> 
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gestion des albums</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{{path("albums")}}">Liste des albums</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="{{path("admin_artistes")}}">Gestion des artistes</a>
-          </div>
-        </li>
-      </ul>
-
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}D2R{% endblock %}</title>
+    <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="{{asset('css/app.css')}}">
+    <link rel="shortcut icon" href="{{ asset('icone/d2r_i.png') }}" type="image/x-icon">
+</head>
+<body>
+    {# navbar #}
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <img src="{{ asset('icone/d2r_log.png') }}" style="width: 67px">
+            <a class="navbar-brand" href="{{path('accueil')}}">&nbsp; D2R</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor02">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{{path('accueil')}}">Accueil
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gestion des artistes</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{path('artistes')}}">Liste des artistes</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Gestion des albums</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{path("albums")}}">Liste des albums</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{path("admin_artistes")}}">Gestion des artistes</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <br><br>
+    <div class="container">
+        {# affiche Modal #}
+        {% for label,messages in app.flashes %}
+            <div class="alert alert-{{label}}">
+                {% for message in messages %}
+                    <p>{{message}}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
     </div>
-  </div>
-</nav>
-<br><br>
-        {% block body %}{% endblock %}
 
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
- 
-    </body>
+    {% block body %}{% endblock %}
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
