--- a/templates/admin/artiste/listeArtistes.html.twig
+++ b/templates/admin/artiste/listeArtistes.html.twig
@@ -34,7 +34,7 @@
                     <td class="col-2">{{ leArtiste.nom }}</td>
                     <td class="col-7">
                         <p class="d-flex flex-row">
-                            <span class="align-self-center badge badge-success" style="color:blue">{{nbAlbums}} {% if nbAlbums>1 %} albums {% else %} album {% endif %}</span>
+                            <span class="align-self-center " style="color:blue">{{nbAlbums}} {% if nbAlbums>1 %} albums {% else %} album {% endif %}</span>
                             <span class="align-self-center mx-3">{% if leArtiste.type == 0 %} Artiste solo {% else %} Groupe {% endif %}</span>
                             <span class="align-self-center ml-auto">{{leArtiste.site}}</span>
                         </p>
@@ -48,7 +48,16 @@
                                 <img src="{{ asset('icone/modif.png') }}" style="width: 27px">
                             </a>
                             &nbsp;
-                            <a href="#" class="btn btn-danger" id="btn" data-toogle="modalSimple" data-target="#exampleModal">
+                            <a href="#" 
+   class="btn btn-danger" 
+   id="btn" 
+   data-toggle="modal" 
+   data-target="#modalSimple" 
+   data-titre="Suppression d'un artiste"
+   data-message="Etes vous sur de vouloir supprimer l'artiste : {{leArtiste.nom}}"
+   data-lien="{{ path('admin_artistes_suppression', {'id' : leArtiste.id}) }}"
+>
+
                                 <img src="{{ asset('icone/supp.png') }}" style="width: 27px">
                             </a>
                         </div>
@@ -64,4 +73,6 @@
             {{ knp_pagination_render(lesArtistes) }}
         </div>
 </div>
+
+{% include "include/_modal.html.twig" %}
 {% endblock %}
