--- a/templates/include/_modal.html.twig
+++ b/templates/include/_modal.html.twig
@@ -1,19 +1,34 @@
-<div class="modalSimple">
+<div id="modalSimple" class="modal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
+        <h5 class="modal-title"></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true"></span>
         </button>
       </div>
       <div class="modal-body">
-        <p>Modal body text goes here.</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <a id="btn-action" href="" type="button" class="btn btn-primary"></a>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
 </div>
+
+<script>
+  $("a[data-lien]").click(function () {
+    // CIBLEZ
+    let lien = $(this).attr("data-lien");
+    let titre = $(this).attr("data-titre");
+    let message = $(this).attr("data-message");
+    let libelleBouton = $(this).attr("data-libelle-bouton"); // Corrected the attribute name
+
+    // AFFECTATION
+    $("#btn-action").attr("href", lien);
+    $(".modal-title").text(titre);
+    $(".modal-body").text(message);
+    $("#btn-action").text(libelleBouton);
+  });
+</script>
