--- a/templates/include/_modal.html.twig
+++ b/templates/include/_modal.html.twig
@@ -10,25 +10,28 @@
       <div class="modal-body">
       </div>
       <div class="modal-footer">
-        <a id="btn-action" href="" type="button" class="btn btn-primary"></a>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <a id="btn-action" type="button" class="btn btn-primary">Supprimer</a>
+        <button type="button" class="btn btn-info" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
 </div>
 
 <script>
-  $("a[data-lien]").click(function () {
-    // CIBLEZ
-    let lien = $(this).attr("data-lien");
-    let titre = $(this).attr("data-titre");
-    let message = $(this).attr("data-message");
-    let libelleBouton = $(this).attr("data-libelle-bouton"); // Corrected the attribute name
+  const elements = document.querySelectorAll('a[data-lien]');
 
-    // AFFECTATION
-    $("#btn-action").attr("href", lien);
-    $(".modal-title").text(titre);
-    $(".modal-body").text(message);
-    $("#btn-action").text(libelleBouton);
+  elements.forEach(element => {
+    element.addEventListener('click', function() {
+
+      const lien = this.getAttribute('data-lien');
+      const titre = this.getAttribute('data-titre');
+      const message = this.getAttribute('data-message');
+      const libelleBouton = this.getAttribute('data-libelle-bouton');
+
+      document.getElementById('btn-action').setAttribute('href', lien); // Changed to 'href'
+      document.querySelector('.modal-title').textContent = titre;
+      document.querySelector('.modal-body').textContent = message;
+      document.getElementById('btn-action').textContent = libelleBouton;
+    });
   });
 </script>
