--- a/templates/include/_modal.html.twig
+++ b/templates/include/_modal.html.twig
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-footer">
         <a id="btn-action" type="button" class="btn btn-primary">Supprimer</a>
-        <button type="button" class="btn btn-info" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
