--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,7 @@
 
 body{
 
-    background-color: rgb(13, 177, 210);
+    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(0,221,214,1) 0%, rgba(51,102,255,1) 90% );
 
 }
 /* Jumbotron */
@@ -63,3 +63,4 @@ table {
     background-color: white;
     font-weight: bold;
 }
+
