--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,12 @@
                             <a class="dropdown-item" href="{{path("admin_artistes")}}">Gestion des artistes</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Listes des Labels</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{path("labels")}}">Liste des labels</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
