--- a/templates/album/ficheAlbum.html.twig
+++ b/templates/album/ficheAlbum.html.twig
@@ -14,7 +14,7 @@
             <h3 class="card-header" style="color:blue"> {{leAlbum.nom}} </h3>
             <div class="row">
                 <div class="col-3 d-flex align-items-center mx-auto">
-                    <img class="mx-auto d-block" style="border-radius: 30%;height:auto; width:200px; margin:auto; display:block;" src="{{leAlbum.image}}" alt="Card image">
+                    <img class="mx-auto d-block" style="height:auto; width:200px; margin:auto; display:block;" src="{{leAlbum.image}}" alt="Card image">
                 </div>
                 <div class="col">
                 
@@ -22,7 +22,6 @@
                 <h5 class="card-title"> 
                 <a href="{{path('ficheArtiste', {'id': leAlbum.artiste.id})}}" style='color:blue;font-weight: bold;'class="badge badge-success"> {{leAlbum.artiste.nom}} </a>
                 </h5>
-
                 <p class="card-text">{{leAlbum.date}}</p>
             </div>
             <ul class="list-group list-group-flush">
@@ -52,11 +51,9 @@
   </thead>
   <tbody>
   {% for leMorceau in leAlbum.morceaux %}
-
   
     <tr class="table-active">
-
-      <td scope="row">00:14</td>
+      <td scope="row">{{leMorceau.piste}}</td>
       <td>{{leMorceau.titre}}</td>
       <td>{{leMorceau.duree}}</td>
     </tr>
