--- a/templates/labels/ficheLabel.html.twig
+++ b/templates/labels/ficheLabel.html.twig
@@ -22,7 +22,7 @@
             <h3 class="card-header" style="color:blue"> {{leLabel.nom}} </h3>
             <div class="row">
                 <div class="col-3 d-flex align-items-center mx-auto">
-                    <img class="mx-auto d-block" style="border-radius: 30%;height:auto; width:150px; margin:auto; display:block;" src="{{leLabel.logo}}" alt="Card image">
+                    <img class="mx-auto d-block" style="height:120px; width:150px; margin:auto; display:block;" src="{{leLabel.logo}}" alt="Card image">
                 </div>
                 <div class="col">
                 
@@ -33,7 +33,7 @@
                 </h5>
             </div>
             <div class="card-body">
-                <p class="card-text">{{leLabel.description|slice(0,170)|raw}}...</p>
+                <p class="card-text">{{leLabel.description|slice(0,200)|raw}}...</p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -50,9 +50,8 @@
 <table class="table table-hover mx-auto">
   <thead>
     <tr>
-      <th scope="col-3">Photo</th>
       <th scope="col-4">Nom de l'album</th>
-    <th scope="col-1">Annee</th>
+    <th scope="col-1">Artiste</th>
       <th scope="col-3">Annee</th>
       <th scope="col-1">Styles</th>
     </tr>
@@ -63,11 +62,15 @@
   
     <tr class="table-active">
 
-      <td> <img class"miniature" src="{{leAlbum.image}}" style="width:70px"></td>
-      <td scope="row"> {{leAlbum.nom}} </td>
-      <td>{{leAlbum.date}}</td>
+      <td scope="row"><a href="{{ path('ficheAlbum', {'id': leAlbum.id }) }}"> {{leAlbum.nom}} </a> </td>
+      <td><a href="{{ path('ficheArtiste', {'id': leArtiste.id }) }}"> {{leArtiste.nom}} </a> </td>
       <td>{{leLabel.annee}}</td>
-      <td>{{leAlbum.morceaux|length}}</td>
+      <td>{% if leLabel.type == "Indépendant" %}
+              <span class="badge" style="background-color:{{ leStyle.couleur | default('#0eedd4') }};">{{ leLabel.type }}</span>
+            {% else %}
+              <span class="badge" style="background-color:{{ leStyle.couleur | default('#0eedd4') }};">{{ leLabel.type }}</span>
+            {% endif %}
+      </td>
 
     </tr>
   {% endfor %}
