--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,3 +67,11 @@ table {
     height: 120px;
     width: 190px;
 }
+
+.list-group-item{
+
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+
+}
