--- a/templates/album/listeAlbum.html.twig
+++ b/templates/album/listeAlbum.html.twig
@@ -32,11 +32,12 @@
                             {% endfor %}
                         </li>
                         {# Label #}
-                        {# <li class="list-group-item">
-                            {% for leLabel in leAlbum.labels %}
-                                <span class="badge" style="background-color:{{ leStyle.couleur }};">{{ leLabel.nom }}</span>
+                         <li class="list-group-item">
+                            {% for leStyle in leAlbum.styles %}
+                                <span class="badge" style="background-color:{{ leStyle.couleur }};">{{ leAlbum.label.nom }}</span>
                             {% endfor %}
-                        </li> #}
+                        </li>   
+
                         {% set nb = leAlbum.morceaux|length %}
                         <li class="list-group-item">
                             {{ nb }} {% if nb > 1 %} morceaux {% else %} morceau {% endif %}
