--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,11 +3,12 @@
     font-family: 'Nanum Gothic', sans-serif;
 }
 
-body{
-
-    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(0,221,214,1) 0%, rgba(51,102,255,1) 90% );
-
+body {
+    background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(0, 221, 214, 1) 0%, rgba(51, 102, 255, 0.5) 90%);
+    background-size: cover; /* ou background-size: 100%; */
+    background-repeat: no-repeat;
 }
+
 /* Jumbotron */
 .example-wrapper { 
     margin: 1em auto; 
@@ -67,6 +68,7 @@ table {
     height: 120px;
     width: 190px;
 }
+
 
 .list-group-item{
 
