--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,10 +35,11 @@
                             <a class="dropdown-item" href="{{path("albums")}}">Liste des albums</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
+                   <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administrations</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="{{path("admin_artistes")}}">Gestion des artistes</a>
+                            <a class="dropdown-item" href="{{ path("admin_artistes") }}">Gestion des artistes</a>
+                            <a class="dropdown-item" href="{{ path("admin_styles") }}">Gestion des styles</a>
                         </div>
                     </li>
                    <li class="nav-item">
