Fin gestion des albums | sauf validation

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,6 +38,7 @@
                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administrations</a>
                         <div class="dropdown-menu">
+                            <a class="dropdown-item" href="{{ path("admin_albums") }}">Gestion des albums</a>
                             <a class="dropdown-item" href="{{ path("admin_artistes") }}">Gestion des artistes</a>
                             <a class="dropdown-item" href="{{ path("admin_styles") }}">Gestion des styles</a>
                         </div>
