--- a/templates/admin/style/listeStyles.html.twig
+++ b/templates/admin/style/listeStyles.html.twig
@@ -27,7 +27,7 @@
         {% for leStyle in lesStyles %}
             {% set nbAlbums = leStyle.albums|length %}
             <tr>
-                <td> <span class="badge" style="background-color:{{ leStyle.couleur }};">   </span></td>
+                <td> <span class="badge" style="background-color:{{ leStyle.couleur }};">&nbsp;&nbsp;</span></td>
                 <td>{{ leStyle.nom }}</td>
                 <td>
                     <div class="d-flex justify-content-between">
